tests/compiler/throwWithoutNewLine1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.8.2/tests/cases/compiler/throwWithoutNewLine1.ts`, Apache-2.0 License

throw //~ ERROR: Expression expected.